# this

./: .gitignore  conftest.py  cookies.json  pfppfpf.py  pyproject.toml
pages/: base_page.py  login_page.py  main_page.py  user_profile_page.py
tests/: test_authorization.py  test_main_page.py  test_user_profile.py
utils/: locators_auth_page.py  logger.py  main_page_locators.py  user_profile_locators.py
